test/errors/func6.ls

#OUTPUT
#Syntax Error: Invalid function arguments list.
# -> [12] func add_two(x:int, )
#
#END

#RET 1

extern func printf(s:str, ...)

func add_two(x:int, )
begin
    x = x + y
end

func main -> int
begin
    return 0
end

